fix(radio): fixed label wrapping

--- a/packages/components/radio/src/style/radio.mixin.less
+++ b/packages/components/radio/src/style/radio.mixin.less
@@ -1,5 +1,10 @@
 @radio-prefix-cls: ~'ant-radio';
 
+.@{radio-prefix-cls}-wrapper {
+  display: flex;
+  white-space: normal;
+}
+
 .@{radio-prefix-cls} + span {
   padding: 0;
   color: @grey-700;
